src/errors/examples/master-error.example.ts
export const MasterErrorExample = {
  notFound: {
    message: 'master not found',
    error: 'Not Found',
    statusCode: 404,
  },
};
